# detloc-ros

./: README.md
ModelWrapper/: ModelWrapper.py
detection_node/: READEM.md  package.xml  setup.py
detection_node/detection_node/: DetectionNode.py
detection_node/launch/: detection.launch.py
docker/: .env  docker-compose.yml
docker/runtime/: Dockerfile
docker/runtime-cuda/: Dockerfile
docker/user/: Dockerfile
localization_node/: README.md  package.xml  setup.cfg  setup.py
